[package]
name = "nail"
version = "0.1.0"
authors = ["ktanaka101 <kentanaka101@gmail.com>"]
edition = "2021"
license = "MIT"

default-run = "dock"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
inkwell = { workspace = true }

lsp = { workspace = true }
hir = { workspace = true }
hir_ty = { workspace = true }
mir = { workspace = true }
codegen_llvm = { workspace = true }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
drop_bomb = "0.1"
either = "1.9.0"
env_logger = "0.10"
expect-test = "1.4"
indexmap = "1.9"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
  "llvm16-0",
] }
la-arena = "0.2"
lasso = "0.6"
logos = "0.12"
num-derive = "0.3"
num-traits = "0.2"
rowan = "0.15"
smol_str = "0.1"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text-size = "1.1"
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }
tower-lsp = "0.17"
typed-arena = "2.0"

lexer = { path = "crates/lexer" }
syntax = { path = "crates/syntax" }
parser = { path = "crates/parser" }
ast = { path = "crates/ast" }
hir = { path = "crates/hir" }
hir_ty = { path = "crates/hir_ty" }
mir = { path = "crates/mir" }
codegen_llvm = { path = "crates/codegen_llvm" }
lsp = { path = "crates/lsp" }

[profile.dev]
debug = 0

[profile.dev.package]
logos.opt-level = 3
rowan.opt-level = 3
smol_str.opt-level = 3
text-size.opt-level = 3
