[package]
name = "nail"
version = "0.1.0"
authors = ["ktanaka101 <kentanaka101@gmail.com>"]
edition = "2021"
license = "MIT"

default-run = "dock"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }

dock = { workspace = true }
lsp = { workspace = true }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0"
ariadne = { version = "0.3", features = ["auto-color"] }
clap = { version = "4.4", features = ["derive"] }
drop_bomb = "0.1"
either = "1.9.0"
env_logger = "0.10"
expect-test = "1.4"
indexmap = "1.9"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
  "llvm16-0",
] }
la-arena = "0.2"
lasso = "0.6"
logos = "0.12"
num-derive = "0.3"
num-traits = "0.2"
regex = "1"
rowan = "0.15"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text-size = "1.1"
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }
tower-lsp = "0.17"

dock = { path = "crates/dock" }
lexer = { path = "crates/lexer" }
syntax = { path = "crates/syntax" }
parser = { path = "crates/parser" }
ast = { path = "crates/ast" }
hir = { path = "crates/hir" }
hir_ty = { path = "crates/hir_ty" }
mir = { path = "crates/mir" }
codegen_llvm = { path = "crates/codegen_llvm" }
base_db = { path = "crates/base_db" }
lsp = { path = "crates/lsp" }

[profile.dev]
debug = 0

[profile.dev.package]
logos.opt-level = 3
rowan.opt-level = 3
text-size.opt-level = 3
la-arena.opt-level = 3
lasso.opt-level = 3
