[package]
name = "nail"
authors = ["ktanaka101 <kentanaka101@gmail.com>"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

default-run = "dock"

[build]
rustflags = ["-Z", "threads=8"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }

dock = { workspace = true }
lsp = { workspace = true }

[workspace]
members = ["crates/*"]

[workspace.lints.rust]

[workspace.dependencies]
anyhow = "*"
ariadne = { version = "*", features = ["auto-color"] }
byteorder = "*"
clap = { version = "*", features = ["derive"] }
crossbeam-channel = "*"
drop_bomb = "*"
either = "*"
expect-test = "*"
indexmap = "*"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
  "llvm18-0",
] }
la-arena = "*"
libc = "*"
logos = "*"
lsp-server = { version = "*" }
lsp-types = { version = "*", features = ["proposed"] }
num_enum = "*"
num-derive = "*"
num-traits = "*"
once_cell = "*"
rayon = "*"
regex = "*"
rowan = "*"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serial_test = "*"
text-size = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing-tree = "*"

dock = { path = "crates/dock" }
nail_gc = { path = "crates/nail_gc" }
lexer = { path = "crates/lexer" }
syntax = { path = "crates/syntax" }
parser = { path = "crates/parser" }
ast = { path = "crates/ast" }
hir = { path = "crates/hir" }
hir_ty = { path = "crates/hir_ty" }
mir = { path = "crates/mir" }
codegen_llvm = { path = "crates/codegen_llvm" }
base_db = { path = "crates/base_db" }
llvm_stackmap = { path = "crates/llvm_stackmap" }
lsp = { path = "crates/lsp" }
diagnostic = { path = "crates/diagnostic" }

[profile.dev]
debug = 0

[profile.dev.package]
logos.opt-level = 3
rowan.opt-level = 3
text-size.opt-level = 3
la-arena.opt-level = 3
