[package]
name = "ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rowan = { workspace = true }
text-size = { workspace = true }

syntax = { workspace = true }

[dev-dependencies]
parser = { workspace = true }
