[package]
name = "ast"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
rowan = { workspace = true }
text-size = { workspace = true }

syntax = { workspace = true }

[dev-dependencies]
parser = { workspace = true }
