[package]
name = "codegen_llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
either = { workspace = true }
inkwell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

hir = { path = "../hir" }
hir_ty = { path = "../hir_ty" }
mir = { path = "../mir" }

[dev-dependencies]
expect-test = { workspace = true }

ast = { path = "../ast" }
parser = { path = "../parser" }
