[package]
name = "codegen_llvm"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
either = { workspace = true }
inkwell = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }

nail_gc = { workspace = true }
hir = { workspace = true }
hir_ty = { workspace = true }
mir = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
tracing-subscriber = { workspace = true }

parser = { workspace = true }
ast = { workspace = true }
