[package]
name = "diagnostic"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
ast = { workspace = true }
parser = { workspace = true }
base_db = { workspace = true }
hir = { workspace = true }
hir_ty = { workspace = true }
