[package]
name = "dock"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
ariadne = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
inkwell = { workspace = true }

ast = { workspace = true }
base_db = { workspace = true }
lsp = { workspace = true }
hir = { workspace = true }
hir_ty = { workspace = true }
mir = { workspace = true }
codegen_llvm = { workspace = true }
diagnostic = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
regex = { workspace = true }
