[package]
name = "hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lasso = { workspace = true }
la-arena = { workspace = true }
smol_str = { workspace = true }

ast = { path = "../ast" }
syntax = { path = "../syntax" }

[dev-dependencies]
expect-test = { workspace = true }

parser = { path = "../parser" }
