[package]
name = "hir"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
la-arena = { workspace = true }
salsa = { workspace = true }

syntax = { workspace = true }
ast = { workspace = true }
parser = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
