[package]
name = "hir_ty"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
la-arena = { workspace = true }
indexmap = { workspace = true }

ast = { workspace = true }
hir = { workspace = true }
salsa = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }

parser = { workspace = true }
