[package]
name = "hir_ty"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
la-arena = { workspace = true }
indexmap = { workspace = true }

ast = { workspace = true }
hir = { workspace = true }
salsa = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }

parser = { workspace = true }
