[package]
name = "lsp"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
rowan = { workspace = true }
text-size = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-lsp = { workspace = true }

syntax = { workspace = true }
parser = { workspace = true }
ast = { workspace = true }
hir = { workspace = true }
hir_ty = { workspace = true }
base_db = { workspace = true }
diagnostic = { workspace = true }
dock = { workspace = true }
