[package]
name = "lsp"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
rowan = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
text-size = { workspace = true }
thiserror = { workspace = true }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
tracing = { workspace = true }

syntax = { workspace = true }
parser = { workspace = true }
ast = { workspace = true }
hir = { workspace = true }
hir_ty = { workspace = true }
base_db = { workspace = true }
diagnostic = { workspace = true }
dock = { workspace = true }
