[package]
name = "mir"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
la-arena = { workspace = true }

ast = { workspace = true }
hir = { workspace = true }
hir_ty = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }

parser = { workspace = true }
