[package]
name = "nail_gc"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
llvm_stackmap = { workspace = true }
libc = { workspace = true }
num_enum = { workspace = true }
inkwell = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
