[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb = { workspace = true }
indexmap = { workspace = true }
rowan = { workspace = true }
text-size = { workspace = true }

lexer = { workspace = true }
syntax = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
