[package]
name = "parser"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
drop_bomb = { workspace = true }
indexmap = { workspace = true }
rowan = { workspace = true }
text-size = { workspace = true }

lexer = { workspace = true }
syntax = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
