[package]
name = "repl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
inkwell = { workspace = true }
termion = { workspace = true }

parser = { workspace = true }
ast = { workspace = true }
hir = { workspace = true }
hir_ty = { workspace = true }
mir = { workspace = true }
codegen_llvm = { workspace = true }
